# DisCalendarV2

./: .gitignore  LICENSE  Makefile.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml
api/: Cargo.toml  Dockerfile  entrypoint.sh  expanded.rs  nohup.out
api/migrations/: 20211010165730_init.sql  20211017013351_guild_config.sql
api/sqlx-macros/: Cargo.toml
api/sqlx-macros/src/: lib.rs
api/src/: client.rs  error.rs  lib.rs
api/src/models/: events.rs  guilds.rs
api/src/routes/: mod.rs
api/src/routes/events/: create.rs  delete.rs  get.rs  mod.rs  update.rs
api/src/routes/guilds/: config.rs  id.rs  joined.rs  mod.rs  user.rs
bot/: Cargo.toml  Dockerfile  entrypoint.sh
bot/src/: data.rs  error.rs  event.rs  main.rs  prelude.rs
bot/src/commands/: create.rs  help.rs  help.txt  init.rs  invite.rs  list.rs  mod.rs  register.rs
bot/src/models/: guilds.rs  mod.rs
bot/src/tasks/: icon_updater.rs  mod.rs  notify.rs  presence.rs
bot/src/utils/: checks.rs  mod.rs  paginator.rs
web/: Dockerfile  nuxt.config.js  package.json
web/components/: AppFooter.vue
web/components/calendar/: Calendar.vue  NewEvent.vue  ServerSetting.vue  SimpleEdit.vue
web/components/global/: Command.vue
web/components/header/: AppHeader.vue  NavDrawer.vue
web/content/docs/: calendar.md  commands.md  edit.md  initialize.md
web/layouts/: authorized.vue
web/pages/: callback.vue
web/pages/dashboard/_id/: index.vue
web/pages/docs/: _slug.vue
web/pages/support/: _slug.vue
web/plugins/: handler.ts
web/store/: auth.ts
