[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.5.0-beta.2"
actix-web = "4.0.0-beta.9"
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
thiserror = "1.0.30"
anyhow = "1.0.44"
sqlx = { version = "0.5.9", features = ["postgres", "runtime-actix-rustls", "chrono"], default-features = false }
reqwest = { version = "0.11.5", features = ["gzip", "json", "cookies"] }
async-trait = "0.1.51"

[dependencies.serenity]
default-features = false
features = [
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "unstable_discord_api"
]
version = "0.10"

[dependencies.sqlx-macros]
path = "./sqlx-macros"
