[package]
name = "bot"
version = "2.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
chrono = "0.4.19"
sqlx = { version = "0.5.9", features = ["postgres", "runtime-actix-rustls", "chrono", "macros"], default-features = false }
thiserror = "1.0.30"
anyhow = "1.0.44"
serde = { version = "1.0.130", features = ["derive"] }
rand = "0.8.4"
serde_json = "1.0.68"
once_cell = "1.8.0"
jpholiday = "0.1"
base64 = "0.13.0"
futures = "0.3.17"
sentry = "0.23.0"
sentry-log = "0.23.0"

[dependencies.poise]
git = "https://github.com/kangalioo/poise"
features = ["collector"]
