[package]
name = "sqlx-macros"
version = "0.1.0"
edition = "2018"

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.13.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.28"
quote = "1.0.9"
sqlx = { version = "0.5.9", features = ["postgres", "runtime-actix-rustls", "chrono"] }
syn = { version = "1.0.74", features = ["full", "extra-traits"] }
